[package]
name = "petope"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
bytes = "1"
tracing-subscriber = "0.3.23"
iroh = "0.97.0"
iroh-tickets = "0.4.0"
iroh-ping = "0.9.0"
tun-rs = { version = "2.8.3", features = ["async"] }
etherparse = "0.20.1"
net-route = "0.4.6"
