[package]
name = "petope"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
bytes = "1"
tracing-subscriber = "0.3.23"
iroh = "0.98.0"
tun-rs = { version = "2.8.3", features = ["async", "async_framed"] }
etherparse = "0.20.1"
net-route = "0.4.6"
serde = "1"
toml_edit = "0.25"
base64 = "0.22.1"
zeroize = "1"
getifs = "0.5.0"
futures = "0.3"
ring-channel = "0.12"
dashmap = "6"
